log
Thu, Mar 27, 2025  4:40:41 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  4:41:27 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
41b85dc
Thu, Mar 27, 2025  4:42:31 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
bfb384b
Thu, Mar 27, 2025  4:44:55 PM: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
fd32cae
Thu, Mar 27, 2025  4:47:48 PM: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
7fa5ea0
Thu, Mar 27, 2025  4:48:32 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
71e6148
Thu, Mar 27, 2025  4:57:48 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c2fa495
Thu, Mar 27, 2025  5:00:04 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e58f745
Thu, Mar 27, 2025  5:03:33 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
ba5466e
